infra/terraform/modules/aws_vpc/securitygroups.tf
resource "aws_security_group" "node_extra" {
    name = "node_extra"
    description = "Extra non-Kops-managed node SG to use as target for other SG rules"
    vpc_id = "${aws_vpc.main.id}"

    tags {
        Name = "node-extra.${var.name}"
        Cluster = "${var.name}"
    }
}

resource "aws_security_group" "bastion_extra" {
    name = "bastion_extra"
    description = "Extra non-Kops-managed node SG to use as target for other SG rules"
    vpc_id = "${aws_vpc.main.id}"

    tags {
        Name = "bastion-extra.${var.name}"
        Cluster = "${var.name}"
    }
}

resource "aws_security_group" "master_extra" {
    name = "master_extra"
    description = "Extra non-Kops-managed master SG to use as target for other SG rules"
    vpc_id = "${aws_vpc.main.id}"

    tags {
        Name = "master-extra.${var.name}"
        Cluster = "${var.name}"
    }

    # Heapster / cAdvisor port access from worker nodes
    ingress {
        from_port = 10255
        to_port = 10255
        protocol = "tcp"
        security_groups = ["${aws_security_group.node_extra.id}"]
    }

    # Prometheus port
    ingress {
        from_port = 10250
        to_port = 10250
        protocol = "tcp"
        security_groups = ["${aws_security_group.node_extra.id}"]
    }
}

resource "aws_security_group" "inbound_ssh" {
    name = "inbound_ssh"
    vpc_id = "${aws_vpc.main.id}"

    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "inbound_http" {
    name = "inbound_http"
    vpc_id = "${aws_vpc.main.id}"

    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port   = 443
      to_port     = 443
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
}
